--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE HTML>
 
 <html>  
+<link href="main.css">
+<script src=before.js>
+
+<link href="main.css" rel= stylesheet>
+<link href="main.js">
+
 
 <head>
 <title>  Apple Rumors </title>
