--- a/index.html
+++ b/index.html
@@ -1,43 +1,36 @@
 <!DOCTYPE HTML>
 
-<html>  
-
-
-
-<link href="main.css" rel= stylesheet>
-<link href="main.js">
-
-
-<head>
-<title>  Apple Rumors </title>
-</head>
-
+<html>
+<title>About Nuclear Fusion</title>
 <body>
-<h1>Iphone 6 Rumors</h1>
-<h2>Camera</h2>
-<p> Apple's iPhone 6 could feature Sony's Exmor IMX220 camera sensor, according to a post on Chinese Sony enthusiast forum Digi-Wo (Google Translate, via G for Games). The Exmor IMX220 features a 13-megapixel, 1/2.3'' sensor and can record videos in 1080p. The sensor would also be a sizable improvement over the camera currently in the iPhone 5s, which uses an 8-megapixel, 1/3.2'' sensor. 
-Past rumors have suggested that the iPhone 6 will retain the same 8-megapixel sensor found in the iPhone 5s, with Apple instead choosing to offer improved image stabilization for more clear photos. A report last month also noted that an optical image stabilization system will be exclusively featured in the larger 5.5-inch iPhone 6, while the smaller 4.7-inch version utilizes an improved lens module. 
-
-Notably however, the iPhone 4S, iPhone 5, and iPhone 5s have used incremental versions of Sony's IMX145 sensor, as Apple could choose implement a new sensor from the company for the iPhone 6. Sony is also expected to use a 20-megapixel version of the IMX220 in its Sony Xperia Z3 flagship device that is slated to ship later this year. 
-
-While Digi-Wo does not have a track record with Apple-related rumors, the website has offered accurate information on past Sony products before their release, and recently offered leaked photos of the Xperia Z3. 
-
-Apple's iPhone 6 is expected to be announced this fall at a special media event. The device is expected to come in two sizes of 4.7 and 5.5-inches, although it is not known if the larger sized iPhone 6 will ship alongside the smaller version. In addition to an improved camera, the iPhone 6 will feature a thinner profile, a faster A8 processor, and Apple's new iOS 8 mobile operating system.
-</p>
-
-
-
-
-<h2>Size</h2>
-<h1>Ipad Rumors</h1>
-
-<h1>Ipod Rumors</h1>
-
-
-<h1>Mac Rumors</h1>
-<p1>www.macrumors.com</p1>
+<h1>Overview</h1>
+In nuclear physics, nuclear fusion is a nuclear reaction in which two
+or more atomic nuclei come very close and then collide at a very high speed
+and join to form a new type of atomic nucleus. During this process, matter
+is not conserved because some of the matter of the fusing nuclei is
+converted to photons (energy). Fusion is the process that powers active or
+"main sequence" stars. The fusion of two nuclei with lower masses than iron (which, along with
+nickel, has the largest binding energy per nucleon) generally releases
+energy, while the fusion of nuclei heavier than iron absorbs energy. The
+opposite is true for the reverse process, nuclear fission. This means that
+fusion generally occurs for lighter elements only, and likewise, that
+fission normally occurs only for heavier elements. There are extreme
+astrophysical events that can lead to short periods of fusion with heavier
+nuclei. This is the process that gives rise to nucleosynthesis, the creation
+of the heavy elements during events such as supernova.Following the discovery of quantum tunneling by Friedrich Hund, in 1929
+Robert Atkinson and Fritz Houtermans used the measured masses of light
+elements to predict that large amounts of energy could be released by fusing
+small nuclei. Building upon the nuclear transmutation experiments by Ernest
+Rutherford, carried out several years earlier, the laboratory fusion of
+hydrogen isotopes was first accomplished by Mark Oliphant in 1932. During
+the remainder of that decade the steps of the main cycle of nuclear fusion
+in stars were worked out by Hans Bethe. Research into fusion for military
+purposes began in the early 1940s as part of the Manhattan Project. Fusion
+was accomplished in 1951 with the Greenhouse Item nuclear test. Nuclear
+fusion on a large scale in an explosion was first carried out on November 1,
+1952, in the Ivy Mike hydrogen bomb test. Research into developing controlled thermonuclear fusion for civil purposes
+also began in earnest in the 1950s, and it continues to this day. The
+present article is about the theory of fusion. For details of the quest for
+controlled fusion and its history, see the article Fusion power.
 </body>
-
 </html>
- 
-
